tests/transpiler/x/scala/group_by_join.error
/tmp/group_new.scala:11: error: illegal start of simple expression
    val stats: ArrayBuffer[Any] = ArrayBuffer.from((for (o <- orders); c <- customers if (o.customerId == c.id) yield (c.name, Map("o" -> o, "c" -> c)))).groupBy(_._1).map{ case (k, arr) => Map("key" -> k, "items" -> ArrayBuffer(arr.map(_._2).toSeq: _*)) }.map(g => Map("name" -> g("key"), "count" -> g("items").size)))
                                                                     ^
/tmp/group_new.scala:11: error: ';' expected but '<-' found.
    val stats: ArrayBuffer[Any] = ArrayBuffer.from((for (o <- orders); c <- customers if (o.customerId == c.id) yield (c.name, Map("o" -> o, "c" -> c)))).groupBy(_._1).map{ case (k, arr) => Map("key" -> k, "items" -> ArrayBuffer(arr.map(_._2).toSeq: _*)) }.map(g => Map("name" -> g("key"), "count" -> g("items").size)))
                                                                         ^
two errors found
